# stm32g4-dsp

./: .gitignore  .mxproject  CMakeLists.txt  CONTRIBUTING.md  README.md  stm32g4-dsp.ioc
Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_it.h
Core/Src/: adc.c  app_freertos.c  dma.c  main.c  stm32g4xx_it.c  tim.c  usart.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
examples/q_usage/: q_usage_example.c
include/: driver.h
src/: CMakeLists.txt  FPU_override.h  driver.c  driver.h
src/adc/: CMakeLists.txt  adc_driver.c  adc_driver.h
src/app/: CMakeLists.txt  acquisition.c  acquisition.h  acquisition_task.c  acquisition_task.h  display_task.c  display_task.h  signal_processing_task.c  signal_processing_task.h
src/fifo/: CMakeLists.txt  fifo.c  fifo.h
src/fir/: CMakeLists.txt  lowpass_fir.c  lowpass_fir.h
src/iir/: CMakeLists.txt  lowpass_iir.c
src/io_drivers/adc/: adc_driver.c  adc_driver.h
src/io_drivers/uart/: CMakeLists.txt  uart_driver.c  uart_driver.h
src/moving_average/: CMakeLists.txt  moving_avarage.c
src/signal_processing/: CMakeLists.txt
src/signal_processing/adaptive_filters/: CMakeLists.txt  lms_filter.c  lms_filter.h  noise_cancelation.c  noise_cancelation.h
src/signal_processing/fft/: CMakeLists.txt  fft.c  fft.h
src/signal_processing/fir/: CMakeLists.txt  fir_filter.c  fir_filter.h  lowpass_fir.c  lowpass_fir.h
src/signal_processing/iir/: iir_filter.c  iir_filter.h  lowpass_iir.c  lowpass_iir.h
src/signal_processing/moving_average/: CMakeLists.txt  moving_average.c  moving_average.h
src/signal_processing/statistics_calculation/: statistics_calculation.c  statistics_calculation.h
src/signal_processing/waveform_generator/: sine_generator.c  sine_generator.h
src/timer/: CMakeLists.txt
src/uart/: CMakeLists.txt  uart_driver.c  uart_driver.h
src/waveform_generator/: CMakeLists.txt  sine_generator.c
templates/: fir_example.c  q_usage_example.c  sin_generator.c
templates/filtering/: driver.c  driver.h
templates/filtering/app/: acquisition.c  acquisition.h  display_task.c  signal_processing_task.c
templates/fir_complete/: driver.c  driver.h
templates/fir_complete/app/: CMakeLists.txt  acquisition.c  acquisition.h  display_task.c  display_task.h  signal_processing_task.c  signal_processing_task.h
utils/: README.md  filter_types.py  fir_coeffs.py  iir_coeffs.py  requirements.txt  save_to_c.py
utils/tools/: filter_types.py  save_to_c.py
